# pgr-patch

./: Cargo.toml  README.MD
krsdk/: Cargo.toml
krsdk/assets/: agreement.json  conf.json
krsdk/src/: globals.rs  lib.rs  net.rs  types.rs  util.rs
krsdk/src/auth/: client.rs
krsdk/src/exports/: agreement.rs  config.rs  curl.rs  init.rs  login.rs  memory.rs  mod.rs  report.rs  unmapped.rs
krsdk/src/ui/: login_dialog.rs  main_window.rs  mod.rs  register_dialog.rs
lucia/: Cargo.toml
lucia/src/: interceptor.rs  lib.rs  util.rs
lucia/src/modules/: mod.rs  network.rs
